fix(s6): harden cold start and service integration