@@ -3,7 +3,6 @@ package org.dromara.music.service.impl;
 import com.alibaba.fastjson2.JSON;
 import com.alibaba.fastjson2.JSONArray;
 import com.alibaba.fastjson2.JSONObject;
-import com.momao.valkey.adapter.ValkeyClientRouting;
 import com.mybatisflex.core.paginate.Page;
 import com.mybatisflex.core.query.QueryCondition;
 import com.mybatisflex.core.query.QueryWrapper;
@@ -16,53 +15,18 @@ import org.dromara.common.mybatisflex.core.page.TableDataInfo;
 import org.dromara.music.domain.Music;
 import org.dromara.music.domain.MusicChartSnapshot;
 import org.dromara.music.domain.Tag;
-import org.dromara.music.domain.vo.MusicChartItemVo;
-import org.dromara.music.domain.vo.MusicDetailVo;
-import org.dromara.music.domain.vo.OpenChartArchiveVo;
-import org.dromara.music.domain.vo.OpenChartItemVo;
-import org.dromara.music.domain.vo.OpenChartVo;
-import org.dromara.music.domain.vo.OpenSearchFacetItemVo;
-import org.dromara.music.domain.vo.OpenSearchPanelVo;
-import org.dromara.music.domain.vo.OpenSearchSuggestVo;
-import org.dromara.music.domain.vo.OpenSearchSortOptionVo;
-import org.dromara.music.domain.vo.OpenUserProfileVo;
-import org.dromara.music.domain.vo.MusicOriginalVo;
-import org.dromara.music.domain.vo.MusicResourceVo;
-import org.dromara.music.domain.vo.MusicTagRelVo;
-import org.dromara.music.domain.vo.MusicVo;
-import org.dromara.music.domain.vo.TagVo;
-import org.dromara.music.mapper.MusicChartItemMapper;
-import org.dromara.music.mapper.MusicChartSnapshotMapper;
-import org.dromara.music.mapper.MusicMapper;
-import org.dromara.music.mapper.MusicOriginalMapper;
-import org.dromara.music.mapper.MusicResourceMapper;
-import org.dromara.music.mapper.MusicTagRelMapper;
-import org.dromara.music.mapper.TagMapper;
-import org.dromara.music.search.MusicSearchDocument;
-import org.dromara.music.search.MusicSearchRepository;
+import org.dromara.music.domain.vo.*;
+import org.dromara.music.mapper.*;
 import org.dromara.music.service.IOpenMusicService;
 import org.dromara.music.service.MusicInteractionService;
 import org.redisson.client.protocol.ScoredEntry;
 import org.springframework.beans.BeanUtils;
-import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
 import java.time.Duration;
-import java.util.Comparator;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.LinkedHashSet;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Set;
-import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.*;
 import java.util.function.Function;
-import java.util.Locale;
 import java.util.stream.Collectors;
 import java.time.LocalDate;
 import java.time.ZoneId;
@@ -86,8 +50,6 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
     private static final String PUBLIC_VISIBLE = "1";
     private static final String CHART_ACTIVE = "published";
     private static final String DEFAULT_SORT = "publish_time_desc";
-    private static final String INDEX_NAME = "idx:music";
-    private static final String KEY_PREFIX = "music:";
     private static final int DEFAULT_RANDOM_LIMIT = 12;
     private static final int MAX_RANDOM_LIMIT = 24;
     private static final int DEFAULT_CHART_LIMIT = 20;
@@ -123,44 +85,15 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
     private final MusicResourceMapper resourceMapper;
     private final MusicTagRelMapper tagRelMapper;
     private final TagMapper tagMapper;
-    private final ObjectProvider<ValkeyClientRouting> clientRoutingProvider;
-    private final ObjectProvider<MusicSearchRepository> musicSearchRepositoryProvider;
     private final MusicInteractionService musicInteractionService;
-
-    private final AtomicBoolean indexInitialized = new AtomicBoolean(false);
-
-    @Value("${valkey.query.enabled:false}")
-    private boolean valkeyQueryEnabled;
 
     @Value("${music.search.synonyms:}")
     private String customSynonymsConfig;
 
     @Override
-    public TableDataInfo<MusicVo> searchPublic(String keyword,
-                                               String tag,
-                                               String tags,
-                                               String style,
-                                               String sort,
-                                               String isOriginal,
-                                               String isAi,
-                                               String resourceStatus,
-                                               String startDate,
-                                               String endDate,
-                                               Long playCountMin,
-                                               Long playCountMax,
-                                               PageQuery pageQuery) {
+    public TableDataInfo<MusicVo> searchPublic(String keyword, String tag, String tags, String style, String sort, String isOriginal, String isAi, String resourceStatus, String startDate, String endDate, Long playCountMin, Long playCountMax, PageQuery pageQuery) {
         recordSearchKeyword(keyword);
-        TableDataInfo<MusicVo> valkeyResult = hasAdvancedFilters(tags, style, isOriginal, isAi, resourceStatus, startDate, endDate, playCountMin, playCountMax)
-            ? null
-            : searchFromValkey(keyword, tag, sort, pageQuery);
-        if (valkeyResult != null && valkeyResult.getTotal() > 0) {
-            return valkeyResult;
-        }
-
-        TableDataInfo<MusicVo> databaseResult = searchFromDatabase(keyword, tag, tags, style, sort, isOriginal, isAi,
-            resourceStatus, startDate, endDate, playCountMin, playCountMax, pageQuery);
-        warmUpIndex(databaseResult.getRows());
-        return databaseResult;
+        return searchFromDatabase(keyword, tag, tags, style, sort, isOriginal, isAi, resourceStatus, startDate, endDate, playCountMin, playCountMax, pageQuery);
     }
 
     @Override
@@ -172,19 +105,14 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
         MusicVo musicVo = musicMapper.selectVoById(id);
         MusicDetailVo detail = new MusicDetailVo();
         BeanUtils.copyProperties(musicVo, detail);
-        List<MusicOriginalVo> originals = originalMapper.selectVoList(
-            QueryWrapper.create().where(MUSIC_ORIGINAL.MUSIC_ID.eq(id)));
-        List<MusicResourceVo> resources = resourceMapper.selectVoList(
-            QueryWrapper.create().where(MUSIC_RESOURCE.MUSIC_ID.eq(id)));
-        List<MusicTagRelVo> rels = tagRelMapper.selectVoList(
-            QueryWrapper.create().where(MUSIC_TAG_REL.MUSIC_ID.eq(id)));
+        List<MusicOriginalVo> originals = originalMapper.selectVoList(QueryWrapper.create().where(MUSIC_ORIGINAL.MUSIC_ID.eq(id)));
+        List<MusicResourceVo> resources = resourceMapper.selectVoList(QueryWrapper.create().where(MUSIC_RESOURCE.MUSIC_ID.eq(id)));
+        List<MusicTagRelVo> rels = tagRelMapper.selectVoList(QueryWrapper.create().where(MUSIC_TAG_REL.MUSIC_ID.eq(id)));
         List<Long> tagIds = rels.stream().map(MusicTagRelVo::getTagId).filter(Objects::nonNull).toList();
-        List<TagVo> tags = tagIds.isEmpty()
-            ? Collections.emptyList()
-            : tagMapper.selectVoList(QueryWrapper.create().where(TAG.ID.in(tagIds)));
+        List<TagVo> tagList = tagIds.isEmpty() ? Collections.emptyList() : tagMapper.selectVoList(QueryWrapper.create().where(TAG.ID.in(tagIds)));
         detail.setOriginals(originals);
         detail.setResources(resources);
-        detail.setTags(tags);
+        detail.setTags(tagList);
         detail.setAuditLogs(Collections.emptyList());
         musicInteractionService.fillDynamicStats(detail);
         return detail;
@@ -192,26 +120,15 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
 
     @Override
     public OpenUserProfileVo queryPublicUserProfile(String uid) {
-        if (StringUtils.isBlank(uid)) {
-            return null;
-        }
-
-        QueryWrapper wrapper = QueryWrapper.create()
-            .where(MUSIC.AUDIT_STATUS.eq(AUDIT_APPROVED).and(MUSIC.IS_PUBLIC.eq(PUBLIC_VISIBLE)));
+        if (StringUtils.isBlank(uid)) return null;
+        QueryWrapper wrapper = QueryWrapper.create().where(MUSIC.AUDIT_STATUS.eq(AUDIT_APPROVED).and(MUSIC.IS_PUBLIC.eq(PUBLIC_VISIBLE)));
         Long creatorId = parseCreatorId(uid);
-        if (creatorId != null) {
-            wrapper.and(MUSIC.CREATOR_ID.eq(creatorId));
-        } else {
-            wrapper.and(MUSIC.CREATOR_NAME.eq(uid));
-        }
+        if (creatorId != null) wrapper.and(MUSIC.CREATOR_ID.eq(creatorId));
+        else wrapper.and(MUSIC.CREATOR_NAME.eq(uid));
         wrapper.orderBy(MUSIC.PUBLISH_TIME.desc(), MUSIC.ID.desc());
-
         List<MusicVo> rows = musicMapper.selectVoList(wrapper);
-        if (rows == null || rows.isEmpty()) {
-            return createEmptyUserProfile(uid, creatorId);
-        }
+        if (rows == null || rows.isEmpty()) return createEmptyUserProfile(uid, creatorId);
         musicInteractionService.fillDynamicStats(rows);
-
         MusicVo first = rows.get(0);
         OpenUserProfileVo profile = new OpenUserProfileVo();
         profile.setUid(creatorId == null ? uid : String.valueOf(creatorId));
@@ -229,9 +146,7 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
     @Override
     public List<MusicVo> queryRandomPublic(Integer limit) {
         int size = normalizeLimit(limit, DEFAULT_RANDOM_LIMIT, MAX_RANDOM_LIMIT);
-        QueryWrapper wrapper = QueryWrapper.create()
-            .where(MUSIC.AUDIT_STATUS.eq(AUDIT_APPROVED).and(MUSIC.IS_PUBLIC.eq(PUBLIC_VISIBLE)))
-            .orderBy("random()", true);
+        QueryWrapper wrapper = QueryWrapper.create().where(MUSIC.AUDIT_STATUS.eq(AUDIT_APPROVED).and(MUSIC.IS_PUBLIC.eq(PUBLIC_VISIBLE))).orderBy("random()", true);
         Page<MusicVo> result = musicMapper.selectVoPage(new Page<>(1, size), wrapper);
         List<MusicVo> rows = result.getRecords() == null ? Collections.emptyList() : result.getRecords();
         musicInteractionService.fillDynamicStats(rows);
@@ -253,21 +168,14 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
                 return vo;
             }).toList();
         }
-
-        QueryWrapper wrapper = QueryWrapper.create()
-            .where(MUSIC.AUDIT_STATUS.eq(AUDIT_APPROVED)
-                .and(MUSIC.IS_PUBLIC.eq(PUBLIC_VISIBLE))
-                .and(buildKeywordCondition(expandedTerms)))
-            .orderBy(MUSIC.PLAY_COUNT.desc(), MUSIC.PUBLISH_TIME.desc());
+        QueryWrapper wrapper = QueryWrapper.create().where(MUSIC.AUDIT_STATUS.eq(AUDIT_APPROVED).and(MUSIC.IS_PUBLIC.eq(PUBLIC_VISIBLE)).and(buildKeywordCondition(expandedTerms))).orderBy(MUSIC.PLAY_COUNT.desc(), MUSIC.PUBLISH_TIME.desc());
         Page<MusicVo> page = musicMapper.selectVoPage(new Page<>(1, size), wrapper);
         List<MusicVo> rows = page.getRecords() == null ? Collections.emptyList() : page.getRecords();
         List<OpenSearchSuggestVo> suggestions = new ArrayList<>();
         suggestions.addAll(rows.stream().map(item -> toSongSuggestVo(item, normalizedKeyword)).toList());
         suggestions.addAll(buildCreatorSuggestions(rows, normalizedKeyword, size));
         suggestions.addAll(buildTagSuggestions(normalizedKeyword, size));
-        return suggestions.stream()
-            .limit(size)
-            .toList();
+        return suggestions.stream().limit(size).toList();
     }
 
     @Override
@@ -275,29 +183,17 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
         int size = normalizeLimit(limit, DEFAULT_HOT_KEYWORD_LIMIT, MAX_HOT_KEYWORD_LIMIT);
         int dayWindow = normalizeLimit(days, DEFAULT_HOT_KEYWORD_DAYS, MAX_HOT_KEYWORD_DAYS);
         try {
-            if (dayWindow <= 1) {
-                return loadKeywordRange(currentDailyHotKey(), size);
-            }
+            if (dayWindow <= 1) return loadKeywordRange(currentDailyHotKey(), size);
             Map<String, Double> scores = new LinkedHashMap<>();
             for (int index = 0; index < dayWindow; index++) {
-                for (ScoredEntry<Object> entry : RedisUtils.getClient()
-                    .getScoredSortedSet(dailyHotKey(index))
-                    .entryRangeReversed(0, size * 3)) {
+                for (ScoredEntry<Object> entry : RedisUtils.getClient().getScoredSortedSet(dailyHotKey(index)).entryRangeReversed(0, size * 3)) {
                     String keyword = String.valueOf(entry.getValue());
-                    if (StringUtils.isBlank(keyword)) {
-                        continue;
-                    }
+                    if (StringUtils.isBlank(keyword)) continue;
                     scores.merge(keyword, entry.getScore(), Double::sum);
                 }
             }
-            if (scores.isEmpty()) {
-                return loadKeywordRange(HOT_SEARCH_KEY, size);
-            }
-            return scores.entrySet().stream()
-                .sorted(Map.Entry.<String, Double>comparingByValue().reversed())
-                .limit(size)
-                .map(Map.Entry::getKey)
-                .toList();
+            if (scores.isEmpty()) return loadKeywordRange(HOT_SEARCH_KEY, size);
+            return scores.entrySet().stream().sorted(Map.Entry.<String, Double>comparingByValue().reversed()).limit(size).map(Map.Entry::getKey).toList();
         } catch (Exception ex) {
             log.warn("读取热门搜索词失败", ex);
             return Collections.emptyList();
@@ -305,29 +201,15 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
     }
 
     @Override
-    public OpenSearchPanelVo querySearchPanel(String keyword,
-                                              String tag,
-                                              String tags,
-                                              String style,
-                                              String sort,
-                                              String isOriginal,
-                                              String isAi,
-                                              String resourceStatus,
-                                              String startDate,
-                                              String endDate,
-                                              Long playCountMin,
-                                              Long playCountMax,
-                                              Integer limit) {
+    public OpenSearchPanelVo querySearchPanel(String keyword, String tag, String tags, String style, String sort, String isOriginal, String isAi, String resourceStatus, String startDate, String endDate, Long playCountMin, Long playCountMax, Integer limit) {
         int facetLimit = normalizeLimit(limit, DEFAULT_PANEL_LIMIT, MAX_PANEL_LIMIT);
-        QueryWrapper wrapper = buildPublicSearchWrapper(keyword, tag, tags, style, isOriginal, isAi, resourceStatus,
-            startDate, endDate, playCountMin, playCountMax);
+        QueryWrapper wrapper = buildPublicSearchWrapper(keyword, tag, tags, style, isOriginal, isAi, resourceStatus, startDate, endDate, playCountMin, playCountMax);
         List<MusicVo> rows = musicMapper.selectVoList(wrapper);
         List<String> selectedTags = parseTagFilters(tag, tags, style);
         List<String> synonymKeywords = resolveSynonymKeywords(keyword);
         String correctedKeyword = resolveCorrectedKeyword(keyword, synonymKeywords);
         String currentSort = normalizePanelSort(sort, keyword);
         String recommendedSort = resolveRecommendedSort(keyword);
-
         OpenSearchPanelVo panel = new OpenSearchPanelVo();
         panel.setKeyword(normalizeKeyword(keyword));
         panel.setCurrentSort(currentSort);
@@ -350,24 +232,12 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
     @Override
     public OpenChartVo queryPublicChart(String chartType, String periodKey, Integer limit) {
         MusicChartSnapshot snapshot = loadLatestSnapshot(chartType, periodKey);
-        if (snapshot == null) {
-            return createEmptyChart(chartType, periodKey);
-        }
-
+        if (snapshot == null) return createEmptyChart(chartType, periodKey);
         int size = normalizeLimit(limit, DEFAULT_CHART_LIMIT, DEFAULT_CHART_LIMIT);
-        List<MusicChartItemVo> items = musicChartItemMapper.selectVoList(QueryWrapper.create()
-            .where(MUSIC_CHART_ITEM.SNAPSHOT_ID.eq(snapshot.getId()))
-            .orderBy(MUSIC_CHART_ITEM.RANK_NO.asc()));
-        if (items.size() > size) {
-            items = new ArrayList<>(items.subList(0, size));
-        }
-
-        List<Long> musicIds = items.stream()
-            .map(MusicChartItemVo::getMusicId)
-            .filter(Objects::nonNull)
-            .toList();
+        List<MusicChartItemVo> items = musicChartItemMapper.selectVoList(QueryWrapper.create().where(MUSIC_CHART_ITEM.SNAPSHOT_ID.eq(snapshot.getId())).orderBy(MUSIC_CHART_ITEM.RANK_NO.asc()));
+        if (items.size() > size) items = new ArrayList<>(items.subList(0, size));
+        List<Long> musicIds = items.stream().map(MusicChartItemVo::getMusicId).filter(Objects::nonNull).toList();
         Map<Long, MusicVo> songMap = loadPublicSongs(musicIds);
-
         OpenChartVo chart = new OpenChartVo();
         chart.setSnapshotId(snapshot.getId());
         chart.setChartType(snapshot.getChartType());
@@ -380,91 +250,26 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
     @Override
     public List<OpenChartArchiveVo> queryChartArchives(String chartType, Integer limit) {
         int size = normalizeLimit(limit, 12, 36);
-        QueryWrapper wrapper = QueryWrapper.create()
-            .where(MUSIC_CHART_SNAPSHOT.STATUS.eq(CHART_ACTIVE));
-        if (StringUtils.isNotBlank(chartType)) {
-            wrapper.and(MUSIC_CHART_SNAPSHOT.CHART_TYPE.eq(chartType));
-        }
+        QueryWrapper wrapper = QueryWrapper.create().where(MUSIC_CHART_SNAPSHOT.STATUS.eq(CHART_ACTIVE));
+        if (StringUtils.isNotBlank(chartType)) wrapper.and(MUSIC_CHART_SNAPSHOT.CHART_TYPE.eq(chartType));
         wrapper.orderBy(MUSIC_CHART_SNAPSHOT.ID.desc());
         List<MusicChartSnapshot> snapshots = musicChartSnapshotMapper.selectListByQueryAs(wrapper, MusicChartSnapshot.class);
-        if (snapshots.size() > size) {
-            snapshots = new ArrayList<>(snapshots.subList(0, size));
-        }
-        if (snapshots.isEmpty()) {
-            return Collections.emptyList();
-        }
+        if (snapshots.size() > size) snapshots = new ArrayList<>(snapshots.subList(0, size));
+        if (snapshots.isEmpty()) return Collections.emptyList();
         return snapshots.stream().map(snapshot -> {
             OpenChartArchiveVo vo = new OpenChartArchiveVo();
             vo.setSnapshotId(snapshot.getId());
             vo.setChartType(snapshot.getChartType());
             vo.setPeriodKey(snapshot.getPeriodKey());
             vo.setStatus(snapshot.getStatus());
-            vo.setItemCount(musicChartItemMapper.selectCountByQuery(
-                QueryWrapper.create().where(MUSIC_CHART_ITEM.SNAPSHOT_ID.eq(snapshot.getId()))));
+            vo.setItemCount(musicChartItemMapper.selectCountByQuery(QueryWrapper.create().where(MUSIC_CHART_ITEM.SNAPSHOT_ID.eq(snapshot.getId()))));
             return vo;
         }).toList();
     }
 
-    private TableDataInfo<MusicVo> searchFromValkey(String keyword, String tag, String sort, PageQuery pageQuery) {
-        if (!valkeyQueryEnabled || isRelevanceSort(sort, keyword)) {
-            return null;
-        }
-        ValkeyClientRouting clientRouting = clientRoutingProvider.getIfAvailable();
-        if (clientRouting == null) {
-            return null;
-        }
-        try {
-            List<String> command = buildSearchCommand(keyword, tag, sort, pageQuery);
-            Object response = clientRouting.executeRead(command.toArray(String[]::new));
-            if (!(response instanceof Object[] values) || values.length == 0 || !(values[0] instanceof Number totalNumber)) {
-                return null;
-            }
-            long total = totalNumber.longValue();
-            if (total <= 0) {
-                return new TableDataInfo<>(Collections.emptyList(), 0L);
-            }
-            List<Long> ids = extractIds(values);
-            if (ids.isEmpty()) {
-                return new TableDataInfo<>(Collections.emptyList(), total);
-            }
-            List<MusicVo> records = musicMapper.selectVoList(
-                QueryWrapper.create().where(MUSIC.ID.in(ids))
-            );
-            Map<Long, MusicVo> orderedMap = records.stream()
-                .collect(Collectors.toMap(MusicVo::getId, item -> item, (left, right) -> left, LinkedHashMap::new));
-            List<MusicVo> ordered = ids.stream()
-                .map(orderedMap::get)
-                .filter(Objects::nonNull)
-                .toList();
-            musicInteractionService.fillDynamicStats(ordered);
-            applySearchHighlights(ordered, keyword);
-            return new TableDataInfo<>(ordered, total);
-        } catch (Exception ex) {
-            log.warn("ValkeySearch 查询失败，回退数据库查询", ex);
-            return null;
-        }
-    }
-
-    private TableDataInfo<MusicVo> searchFromDatabase(String keyword,
-                                                      String tag,
-                                                      String tags,
-                                                      String style,
-                                                      String sort,
-                                                      String isOriginal,
-                                                      String isAi,
-                                                      String resourceStatus,
-                                                      String startDate,
-                                                      String endDate,
-                                                      Long playCountMin,
-                                                      Long playCountMax,
-                                                      PageQuery pageQuery) {
-        if (isRelevanceSort(sort, keyword)) {
-            return searchByRelevance(keyword, tag, tags, style, isOriginal, isAi, resourceStatus, startDate, endDate,
-                playCountMin, playCountMax, pageQuery);
-        }
-        QueryWrapper wrapper = buildPublicSearchWrapper(keyword, tag, tags, style, isOriginal, isAi, resourceStatus,
-            startDate, endDate, playCountMin, playCountMax);
-
+    private TableDataInfo<MusicVo> searchFromDatabase(String keyword, String tag, String tags, String style, String sort, String isOriginal, String isAi, String resourceStatus, String startDate, String endDate, Long playCountMin, Long playCountMax, PageQuery pageQuery) {
+        if (isRelevanceSort(sort, keyword)) return searchByRelevance(keyword, tag, tags, style, isOriginal, isAi, resourceStatus, startDate, endDate, playCountMin, playCountMax, pageQuery);
+        QueryWrapper wrapper = buildPublicSearchWrapper(keyword, tag, tags, style, isOriginal, isAi, resourceStatus, startDate, endDate, playCountMin, playCountMax);
         applySort(wrapper, sort);
         Page<MusicVo> result = musicMapper.selectVoPage(pageQuery.build(), wrapper);
         musicInteractionService.fillDynamicStats(result.getRecords());
@@ -472,138 +277,73 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
         return TableDataInfo.build(result);
     }
 
-    private TableDataInfo<MusicVo> searchByRelevance(String keyword,
-                                                     String tag,
-                                                     String tags,
-                                                     String style,
-                                                     String isOriginal,
-                                                     String isAi,
-                                                     String resourceStatus,
-                                                     String startDate,
-                                                     String endDate,
-                                                     Long playCountMin,
-                                                     Long playCountMax,
-                                                     PageQuery pageQuery) {
-        QueryWrapper wrapper = buildPublicSearchWrapper(keyword, tag, tags, style, isOriginal, isAi, resourceStatus,
-            startDate, endDate, playCountMin, playCountMax);
+    private TableDataInfo<MusicVo> searchByRelevance(String keyword, String tag, String tags, String style, String isOriginal, String isAi, String resourceStatus, String startDate, String endDate, Long playCountMin, Long playCountMax, PageQuery pageQuery) {
+        QueryWrapper wrapper = buildPublicSearchWrapper(keyword, tag, tags, style, isOriginal, isAi, resourceStatus, startDate, endDate, playCountMin, playCountMax);
         wrapper.orderBy(MUSIC.PLAY_COUNT.desc(), MUSIC.PUBLISH_TIME.desc());
-
         Page<MusicVo> requestedPage = pageQuery.build();
-        int fetchSize = Math.min(
-            Math.max((int) requestedPage.getPageSize() * 8, DEFAULT_RELEVANCE_FETCH_LIMIT),
-            MAX_RELEVANCE_FETCH_LIMIT
-        );
+        int fetchSize = Math.min(Math.max((int) requestedPage.getPageSize() * 8, DEFAULT_RELEVANCE_FETCH_LIMIT), MAX_RELEVANCE_FETCH_LIMIT);
         Page<MusicVo> candidatePage = musicMapper.selectVoPage(new Page<>(1, fetchSize), wrapper);
         List<MusicVo> candidates = candidatePage.getRecords() == null ? new ArrayList<>() : new ArrayList<>(candidatePage.getRecords());
-
         musicInteractionService.fillDynamicStats(candidates);
         applySearchHighlights(candidates, keyword);
         applyRelevanceRanking(candidates, keyword, tag, tags, style);
-
         int fromIndex = (int) Math.max(0, (requestedPage.getPageNumber() - 1) * requestedPage.getPageSize());
-        if (fromIndex >= candidates.size()) {
-            return new TableDataInfo<>(Collections.emptyList(), candidatePage.getTotalRow());
-        }
+        if (fromIndex >= candidates.size()) return new TableDataInfo<>(Collections.emptyList(), candidatePage.getTotalRow());
         int toIndex = Math.min(candidates.size(), fromIndex + (int) requestedPage.getPageSize());
         return new TableDataInfo<>(new ArrayList<>(candidates.subList(fromIndex, toIndex)), candidatePage.getTotalRow());
     }
 
-    private QueryWrapper buildPublicSearchWrapper(String keyword,
-                                                  String tag,
-                                                  String tags,
-                                                  String style,
-                                                  String isOriginal,
-                                                  String isAi,
-                                                  String resourceStatus,
-                                                  String startDate,
-                                                  String endDate,
-                                                  Long playCountMin,
-                                                  Long playCountMax) {
-        QueryWrapper wrapper = QueryWrapper.create()
-            .where(MUSIC.AUDIT_STATUS.eq(AUDIT_APPROVED).and(MUSIC.IS_PUBLIC.eq(PUBLIC_VISIBLE)));
+    private QueryWrapper buildPublicSearchWrapper(String keyword, String tag, String tags, String style, String isOriginal, String isAi, String resourceStatus, String startDate, String endDate, Long playCountMin, Long playCountMax) {
+        QueryWrapper wrapper = QueryWrapper.create().where(MUSIC.AUDIT_STATUS.eq(AUDIT_APPROVED).and(MUSIC.IS_PUBLIC.eq(PUBLIC_VISIBLE)));
         QueryCondition keywordCondition = buildKeywordCondition(buildExpandedSearchTerms(keyword));
-        if (keywordCondition != null) {
-            wrapper.and(keywordCondition);
-        }
+        if (keywordCondition != null) wrapper.and(keywordCondition);
         for (String tagValue : parseTagFilters(tag, tags, style)) {
-            wrapper.and(MUSIC.TAGS_SNAPSHOT.like(tagValue));
+            wrapper.and("lower(coalesce(tags_snapshot::text, '')) like ?", "%" + tagValue.toLowerCase(Locale.ROOT) + "%");
         }
         String normalizedOriginal = normalizeOriginalFilter(isOriginal);
-        if (StringUtils.isNotBlank(normalizedOriginal)) {
-            wrapper.and(MUSIC.IS_ORIGINAL.eq(normalizedOriginal));
-        }
+        if (StringUtils.isNotBlank(normalizedOriginal)) wrapper.and(MUSIC.IS_ORIGINAL.eq(normalizedOriginal));
         applyAiFilter(wrapper, isAi);
-        if (StringUtils.isNotBlank(resourceStatus)) {
-            wrapper.and(MUSIC.RESOURCE_STATUS.eq(resourceStatus.trim()));
-        }
-        if (playCountMin != null && playCountMin >= 0) {
-            wrapper.and(MUSIC.PLAY_COUNT.ge(playCountMin));
-        }
-        if (playCountMax != null && playCountMax >= 0) {
-            wrapper.and(MUSIC.PLAY_COUNT.le(playCountMax));
-        }
+        if (StringUtils.isNotBlank(resourceStatus)) wrapper.and(MUSIC.RESOURCE_STATUS.eq(resourceStatus.trim()));
+        if (playCountMin != null && playCountMin >= 0) wrapper.and(MUSIC.PLAY_COUNT.ge(playCountMin));
+        if (playCountMax != null && playCountMax >= 0) wrapper.and(MUSIC.PLAY_COUNT.le(playCountMax));
         java.util.Date parsedStartDate = parseDateStart(startDate);
-        if (parsedStartDate != null) {
-            wrapper.and(MUSIC.PUBLISH_TIME.ge(parsedStartDate));
-        }
+        if (parsedStartDate != null) wrapper.and(MUSIC.PUBLISH_TIME.ge(parsedStartDate));
         java.util.Date parsedEndDate = parseDateEnd(endDate);
-        if (parsedEndDate != null) {
-            wrapper.and(MUSIC.PUBLISH_TIME.le(parsedEndDate));
-        }
+        if (parsedEndDate != null) wrapper.and(MUSIC.PUBLISH_TIME.le(parsedEndDate));
         return wrapper;
     }
 
     private void applyAiFilter(QueryWrapper wrapper, String isAi) {
         String normalized = normalizeBooleanLikeFilter(isAi);
-        if (StringUtils.isBlank(normalized)) {
-            return;
-        }
+        if (StringUtils.isBlank(normalized)) return;
         if ("1".equals(normalized)) {
-            wrapper.and("(lower(coalesce(tags_snapshot::text, '')) like ? or lower(coalesce(extend_data::text, '')) like ? or lower(coalesce(extend_data::text, '')) like ?)",
-                "%ai%", "%\"isai\":true%", "%\"is_ai\":true%");
+            wrapper.and("(lower(coalesce(tags_snapshot::text, '')) like ? or lower(coalesce(extend_data::text, '')) like ?)", "%ai%", "%\"isai\":true%");
             return;
         }
-        wrapper.and("(lower(coalesce(tags_snapshot::text, '')) not like ? and lower(coalesce(extend_data::text, '')) not like ? and lower(coalesce(extend_data::text, '')) not like ?)",
-            "%ai%", "%\"isai\":true%", "%\"is_ai\":true%");
+        wrapper.and("(lower(coalesce(tags_snapshot::text, '')) not like ? and lower(coalesce(extend_data::text, '')) not like ?)", "%ai%", "%\"isai\":true%");
     }
 
     private QueryCondition buildKeywordCondition(List<String> terms) {
-        if (terms == null || terms.isEmpty()) {
-            return null;
-        }
+        if (terms == null || terms.isEmpty()) return null;
         QueryCondition combined = null;
         for (String term : terms) {
-            QueryCondition current = MUSIC.TITLE.like(term)
-                .or(MUSIC.SUBTITLE.like(term))
-                .or(MUSIC.ORIGINAL_TITLE.like(term))
-                .or(MUSIC.CREATOR_NAME.like(term))
-                .or(MUSIC.TAGS_SNAPSHOT.like(term));
+            QueryCondition current = MUSIC.TITLE.like(term).or(MUSIC.SUBTITLE.like(term)).or(MUSIC.ORIGINAL_TITLE.like(term)).or(MUSIC.CREATOR_NAME.like(term));
             combined = combined == null ? current : combined.and(current);
         }
         return combined;
     }
 
     private MusicChartSnapshot loadLatestSnapshot(String chartType, String periodKey) {
-        QueryWrapper wrapper = QueryWrapper.create()
-            .where(MUSIC_CHART_SNAPSHOT.STATUS.eq(CHART_ACTIVE));
-        if (StringUtils.isNotBlank(chartType)) {
-            wrapper.and(MUSIC_CHART_SNAPSHOT.CHART_TYPE.eq(chartType));
-        }
-        if (StringUtils.isNotBlank(periodKey)) {
-            wrapper.and(MUSIC_CHART_SNAPSHOT.PERIOD_KEY.eq(periodKey));
-        }
+        QueryWrapper wrapper = QueryWrapper.create().where(MUSIC_CHART_SNAPSHOT.STATUS.eq(CHART_ACTIVE));
+        if (StringUtils.isNotBlank(chartType)) wrapper.and(MUSIC_CHART_SNAPSHOT.CHART_TYPE.eq(chartType));
+        if (StringUtils.isNotBlank(periodKey)) wrapper.and(MUSIC_CHART_SNAPSHOT.PERIOD_KEY.eq(periodKey));
         wrapper.orderBy(MUSIC_CHART_SNAPSHOT.ID.desc());
         return musicChartSnapshotMapper.selectOneByQuery(wrapper);
     }
 
     private Map<Long, MusicVo> loadPublicSongs(List<Long> musicIds) {
-        if (musicIds == null || musicIds.isEmpty()) {
-            return Collections.emptyMap();
-        }
-        List<MusicVo> songs = musicMapper.selectVoList(QueryWrapper.create()
-            .where(MUSIC.ID.in(musicIds)
-                .and(MUSIC.AUDIT_STATUS.eq(AUDIT_APPROVED))
-                .and(MUSIC.IS_PUBLIC.eq(PUBLIC_VISIBLE))));
+        if (musicIds == null || musicIds.isEmpty()) return Collections.emptyMap();
+        List<MusicVo> songs = musicMapper.selectVoList(QueryWrapper.create().where(MUSIC.ID.in(musicIds).and(MUSIC.AUDIT_STATUS.eq(AUDIT_APPROVED)).and(MUSIC.IS_PUBLIC.eq(PUBLIC_VISIBLE))));
         musicInteractionService.fillDynamicStats(songs);
         return songs.stream().collect(Collectors.toMap(MusicVo::getId, item -> item, (left, right) -> left, LinkedHashMap::new));
     }
@@ -658,48 +398,33 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
     }
 
     private List<OpenSearchSuggestVo> buildCreatorSuggestions(List<MusicVo> rows, String keyword, int limit) {
-        return rows.stream()
-            .map(MusicVo::getCreatorName)
-            .filter(value -> containsIgnoreCase(value, keyword))
-            .filter(StringUtils::isNotBlank)
-            .distinct()
-            .limit(Math.max(1, limit / 3))
-            .map(value -> {
-                OpenSearchSuggestVo vo = new OpenSearchSuggestVo();
-                vo.setKeyword(value);
-                vo.setTitle(value);
-                vo.setSuggestType("creator");
-                vo.setMatchType("creator_name");
-                vo.setMatchedText(value);
-                vo.setHighlightedText(buildHighlightedText(value, keyword));
-                return vo;
-            })
-            .toList();
+        return rows.stream().map(MusicVo::getCreatorName).filter(value -> containsIgnoreCase(value, keyword)).filter(StringUtils::isNotBlank).distinct().limit(Math.max(1, limit / 3)).map(value -> {
+            OpenSearchSuggestVo vo = new OpenSearchSuggestVo();
+            vo.setKeyword(value);
+            vo.setTitle(value);
+            vo.setSuggestType("creator");
+            vo.setMatchType("creator_name");
+            vo.setMatchedText(value);
+            vo.setHighlightedText(buildHighlightedText(value, keyword));
+            return vo;
+        }).toList();
     }
 
     private List<OpenSearchSuggestVo> buildTagSuggestions(String keyword, int limit) {
-        List<TagVo> tags = tagMapper.selectVoList(QueryWrapper.create()
-            .where(TAG.STATUS.eq("0")
-                .and(TAG.NAME.like(keyword).or(TAG.TAG_ALIAS.like(keyword))))
-            .orderBy(TAG.IS_HOT.desc(), TAG.USE_COUNT.desc(), TAG.SORT_ORDER.asc(), TAG.ID.asc()));
-        if (tags.isEmpty()) {
-            return Collections.emptyList();
-        }
-        return tags.stream()
-            .limit(Math.max(1, limit / 3))
-            .map(tag -> {
-                OpenSearchSuggestVo vo = new OpenSearchSuggestVo();
-                vo.setTagId(tag.getId());
-                vo.setKeyword(tag.getName());
-                vo.setTitle(tag.getName());
-                vo.setSubtitle(firstNonBlank(tag.getTagAlias(), tag.getType()));
-                vo.setSuggestType("tag");
-                vo.setMatchType("tag");
-                vo.setMatchedText(firstNonBlank(tag.getName(), tag.getTagAlias()));
-                vo.setHighlightedText(buildHighlightedText(vo.getMatchedText(), keyword));
-                return vo;
-            })
-            .toList();
+        List<TagVo> tags = tagMapper.selectVoList(QueryWrapper.create().where(TAG.STATUS.eq("0").and(TAG.NAME.like(keyword).or(TAG.TAG_ALIAS.like(keyword)))).orderBy(TAG.IS_HOT.desc(), TAG.USE_COUNT.desc(), TAG.SORT_ORDER.asc(), TAG.ID.asc()));
+        if (tags.isEmpty()) return Collections.emptyList();
+        return tags.stream().limit(Math.max(1, limit / 3)).map(tag -> {
+            OpenSearchSuggestVo vo = new OpenSearchSuggestVo();
+            vo.setTagId(tag.getId());
+            vo.setKeyword(tag.getName());
+            vo.setTitle(tag.getName());
+            vo.setSubtitle(firstNonBlank(tag.getTagAlias(), tag.getType()));
+            vo.setSuggestType("tag");
+            vo.setMatchType("tag");
+            vo.setMatchedText(firstNonBlank(tag.getName(), tag.getTagAlias()));
+            vo.setHighlightedText(buildHighlightedText(vo.getMatchedText(), keyword));
+            return vo;
+        }).toList();
     }
 
     private String resolveMatchedText(MusicVo musicVo, String matchType) {
@@ -714,81 +439,43 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
     }
 
     private String buildHighlightedText(String text, String keyword) {
-        if (StringUtils.isBlank(text) || StringUtils.isBlank(keyword)) {
-            return text;
-        }
+        if (StringUtils.isBlank(text) || StringUtils.isBlank(keyword)) return text;
         String lowerText = text.toLowerCase();
         String lowerKeyword = keyword.toLowerCase();
         int start = lowerText.indexOf(lowerKeyword);
-        if (start < 0) {
-            return text;
-        }
+        if (start < 0) return text;
         int end = start + keyword.length();
         return text.substring(0, start) + "<em>" + text.substring(start, end) + "</em>" + text.substring(end);
     }
 
     private String resolveMatchType(MusicVo musicVo, String keyword) {
-        if (containsIgnoreCase(musicVo.getTitle(), keyword)) {
-            return "title";
-        }
-        if (containsIgnoreCase(musicVo.getSubtitle(), keyword)) {
-            return "subtitle";
-        }
-        if (containsIgnoreCase(musicVo.getOriginalTitle(), keyword)) {
-            return "original_title";
-        }
-        if (containsIgnoreCase(musicVo.getCreatorName(), keyword)) {
-            return "creator_name";
-        }
-        if (containsIgnoreCase(musicVo.getTagsSnapshot(), keyword)) {
-            return "tag";
-        }
+        if (containsIgnoreCase(musicVo.getTitle(), keyword)) return "title";
+        if (containsIgnoreCase(musicVo.getSubtitle(), keyword)) return "subtitle";
+        if (containsIgnoreCase(musicVo.getOriginalTitle(), keyword)) return "original_title";
+        if (containsIgnoreCase(musicVo.getCreatorName(), keyword)) return "creator_name";
+        if (containsIgnoreCase(musicVo.getTagsSnapshot(), keyword)) return "tag";
         return "keyword";
     }
 
     private boolean containsIgnoreCase(String value, String keyword) {
-        return StringUtils.isNotBlank(value)
-            && StringUtils.isNotBlank(keyword)
-            && value.toLowerCase().contains(keyword.toLowerCase());
+        return StringUtils.isNotBlank(value) && StringUtils.isNotBlank(keyword) && value.toLowerCase().contains(keyword.toLowerCase());
     }
 
     private void applyRelevanceRanking(List<MusicVo> rows, String keyword, String tag, String tags, String style) {
-        if (rows == null || rows.isEmpty()) {
-            return;
-        }
+        if (rows == null || rows.isEmpty()) return;
         List<String> baseTerms = parseSearchTerms(keyword);
         List<String> expandedTerms = buildExpandedSearchTerms(keyword);
         List<String> selectedTags = parseTagFilters(tag, tags, style);
-        for (MusicVo row : rows) {
-            row.setSearchScore(computeSearchScore(row, baseTerms, expandedTerms, selectedTags));
-        }
-        rows.sort(Comparator
-            .comparing(MusicVo::getSearchScore, Comparator.nullsLast(Comparator.reverseOrder()))
-            .thenComparing(MusicVo::getPlayCount, Comparator.nullsLast(Comparator.reverseOrder()))
-            .thenComparing(MusicVo::getLikeCount, Comparator.nullsLast(Comparator.reverseOrder()))
-            .thenComparing(MusicVo::getPublishTime, Comparator.nullsLast(Comparator.reverseOrder()))
-            .thenComparing(MusicVo::getId, Comparator.nullsLast(Comparator.reverseOrder())));
+        for (MusicVo row : rows) row.setSearchScore(computeSearchScore(row, baseTerms, expandedTerms, selectedTags));
+        rows.sort(Comparator.comparing(MusicVo::getSearchScore, Comparator.nullsLast(Comparator.reverseOrder())).thenComparing(MusicVo::getPlayCount, Comparator.nullsLast(Comparator.reverseOrder())).thenComparing(MusicVo::getLikeCount, Comparator.nullsLast(Comparator.reverseOrder())).thenComparing(MusicVo::getPublishTime, Comparator.nullsLast(Comparator.reverseOrder())).thenComparing(MusicVo::getId, Comparator.nullsLast(Comparator.reverseOrder())));
     }
 
-    private double computeSearchScore(MusicVo row,
-                                      List<String> baseTerms,
-                                      List<String> expandedTerms,
-                                      List<String> selectedTags) {
+    private double computeSearchScore(MusicVo row, List<String> baseTerms, List<String> expandedTerms, List<String> selectedTags) {
         double score = 0D;
-        for (String term : baseTerms) {
-            score += computeFieldMatchScore(row, term, true);
-        }
-        for (String term : expandedTerms) {
-            if (!baseTerms.contains(term)) {
-                score += computeFieldMatchScore(row, term, false);
-            }
-        }
+        for (String term : baseTerms) score += computeFieldMatchScore(row, term, true);
+        for (String term : expandedTerms) if (!baseTerms.contains(term)) score += computeFieldMatchScore(row, term, false);
         List<String> tags = extractTagNames(row.getTagsSnapshot());
-        for (String selectedTag : selectedTags) {
-            if (tags.stream().anyMatch(item -> equalsIgnoreCase(item, selectedTag))) {
-                score += 20D;
-            }
-        }
+        for (String selectedTag : selectedTags) if (tags.stream().anyMatch(item -> equalsIgnoreCase(item, selectedTag))) score += 20D;
         score += Math.log1p(safeLong(row.getPlayCount())) * 2.2D;
         score += Math.log1p(safeLong(row.getLikeCount())) * 3.0D;
         score += Math.log1p(safeLong(row.getCollectCount())) * 3.6D;
@@ -799,9 +486,7 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
     }
 
     private double computeFieldMatchScore(MusicVo row, String term, boolean directTerm) {
-        if (StringUtils.isBlank(term)) {
-            return 0D;
-        }
+        if (StringUtils.isBlank(term)) return 0D;
         double factor = directTerm ? 1D : 0.55D;
         double score = 0D;
         score += fieldScore(row.getTitle(), term, 140D, 90D) * factor;
@@ -813,118 +498,57 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
     }
 
     private double fieldScore(String value, String term, double exactScore, double containsScore) {
-        if (StringUtils.isBlank(value) || StringUtils.isBlank(term)) {
-            return 0D;
-        }
+        if (StringUtils.isBlank(value) || StringUtils.isBlank(term)) return 0D;
         String normalizedValue = normalizeComparableText(value);
         String normalizedTerm = normalizeComparableText(term);
-        if (normalizedValue.equals(normalizedTerm)) {
-            return exactScore;
-        }
-        if (normalizedValue.startsWith(normalizedTerm)) {
-            return containsScore + 10D;
-        }
-        if (normalizedValue.contains(normalizedTerm)) {
-            return containsScore;
-        }
+        if (normalizedValue.equals(normalizedTerm)) return exactScore;
+        if (normalizedValue.startsWith(normalizedTerm)) return containsScore + 10D;
+        if (normalizedValue.contains(normalizedTerm)) return containsScore;
         return 0D;
     }
 
     private double tagsScore(String tagsSnapshot, String term, double hitScore) {
-        if (StringUtils.isBlank(term)) {
-            return 0D;
-        }
-        for (String item : extractTagNames(tagsSnapshot)) {
-            if (fieldScore(item, term, hitScore + 10D, hitScore) > 0D) {
-                return fieldScore(item, term, hitScore + 10D, hitScore);
-            }
-        }
+        if (StringUtils.isBlank(term)) return 0D;
+        for (String item : extractTagNames(tagsSnapshot)) if (fieldScore(item, term, hitScore + 10D, hitScore) > 0D) return fieldScore(item, term, hitScore + 10D, hitScore);
         return 0D;
     }
 
     private double recencyScore(java.util.Date publishTime) {
-        if (publishTime == null) {
-            return 0D;
-        }
-        long days = ChronoUnit.DAYS.between(
-            publishTime.toInstant().atZone(ZoneId.systemDefault()).toLocalDateTime(),
-            LocalDateTime.now(ZoneId.systemDefault())
-        );
+        if (publishTime == null) return 0D;
+        long days = ChronoUnit.DAYS.between(publishTime.toInstant().atZone(ZoneId.systemDefault()).toLocalDateTime(), LocalDateTime.now(ZoneId.systemDefault()));
         return Math.max(0D, 30D - Math.max(0L, days)) * 0.8D;
     }
 
-    private long safeLong(Long value) {
-        return value == null ? 0L : Math.max(0L, value);
-    }
-
-    private boolean hasAdvancedFilters(String tags,
-                                       String style,
-                                       String isOriginal,
-                                       String isAi,
-                                       String resourceStatus,
-                                       String startDate,
-                                       String endDate,
-                                       Long playCountMin,
-                                       Long playCountMax) {
-        return StringUtils.isNotBlank(tags)
-            || StringUtils.isNotBlank(style)
-            || StringUtils.isNotBlank(normalizeOriginalFilter(isOriginal))
-            || StringUtils.isNotBlank(normalizeBooleanLikeFilter(isAi))
-            || StringUtils.isNotBlank(resourceStatus)
-            || StringUtils.isNotBlank(startDate)
-            || StringUtils.isNotBlank(endDate)
-            || playCountMin != null
-            || playCountMax != null;
-    }
-
     private String normalizeOriginalFilter(String value) {
-        if (StringUtils.isBlank(value)) {
-            return null;
-        }
+        if (StringUtils.isBlank(value)) return null;
         String normalized = value.trim().toLowerCase(Locale.ROOT);
-        if ("1".equals(normalized) || "true".equals(normalized) || "yes".equals(normalized) || "original".equals(normalized)) {
-            return "1";
-        }
-        if ("0".equals(normalized) || "false".equals(normalized) || "no".equals(normalized) || "cover".equals(normalized)) {
-            return "0";
-        }
+        if ("1".equals(normalized) || "true".equals(normalized) || "yes".equals(normalized) || "original".equals(normalized)) return "1";
+        if ("0".equals(normalized) || "false".equals(normalized) || "no".equals(normalized) || "cover".equals(normalized)) return "0";
         return null;
     }
 
     private String normalizeBooleanLikeFilter(String value) {
-        if (StringUtils.isBlank(value)) {
-            return null;
-        }
+        if (StringUtils.isBlank(value)) return null;
         String normalized = value.trim().toLowerCase(Locale.ROOT);
-        if ("1".equals(normalized) || "true".equals(normalized) || "yes".equals(normalized) || "ai".equals(normalized)) {
-            return "1";
-        }
-        if ("0".equals(normalized) || "false".equals(normalized) || "no".equals(normalized) || "non_ai".equals(normalized) || "no_ai".equals(normalized)) {
-            return "0";
-        }
+        if ("1".equals(normalized) || "true".equals(normalized) || "yes".equals(normalized) || "ai".equals(normalized)) return "1";
+        if ("0".equals(normalized) || "false".equals(normalized) || "no".equals(normalized) || "non_ai".equals(normalized) || "no_ai".equals(normalized)) return "0";
         return null;
     }
 
     private java.util.Date parseDateStart(String value) {
         LocalDate date = parseDateFilter(value, false);
-        if (date == null) {
-            return null;
-        }
+        if (date == null) return null;
         return java.util.Date.from(date.atStartOfDay(ZoneId.systemDefault()).toInstant());
     }
 
     private java.util.Date parseDateEnd(String value) {
         LocalDate date = parseDateFilter(value, true);
-        if (date == null) {
-            return null;
-        }
+        if (date == null) return null;
         return java.util.Date.from(date.plusDays(1).atStartOfDay(ZoneId.systemDefault()).minusNanos(1).toInstant());
     }
 
     private LocalDate parseDateFilter(String value, boolean useMonthEnd) {
-        if (StringUtils.isBlank(value)) {
-            return null;
-        }
+        if (StringUtils.isBlank(value)) return null;
         String normalized = value.trim();
         try {
             if (normalized.matches("\\d{4}-\\d{2}")) {
@@ -950,24 +574,15 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
     }
 
     private boolean isRelevanceSort(String sort, String keyword) {
-        if (StringUtils.isBlank(keyword)) {
-            return false;
-        }
+        if (StringUtils.isBlank(keyword)) return false;
         String normalized = StringUtils.defaultIfBlank(sort, "relevance").toLowerCase(Locale.ROOT);
-        return "relevance".equals(normalized)
-            || "smart".equals(normalized)
-            || "composite_hot".equals(normalized)
-            || "hot_score_desc".equals(normalized);
+        return "relevance".equals(normalized) || "smart".equals(normalized) || "composite_hot".equals(normalized) || "hot_score_desc".equals(normalized);
     }
 
     private void applySearchHighlights(List<MusicVo> rows, String keyword) {
-        if (rows == null || rows.isEmpty()) {
-            return;
-        }
+        if (rows == null || rows.isEmpty()) return;
         List<String> searchTerms = parseSearchTerms(keyword);
-        if (searchTerms.isEmpty()) {
-            return;
-        }
+        if (searchTerms.isEmpty()) return;
         for (MusicVo row : rows) {
             row.setHighlightTitle(highlightByTerms(row.getTitle(), searchTerms));
             row.setHighlightSubtitle(highlightByTerms(row.getSubtitle(), searchTerms));
@@ -977,103 +592,38 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
         }
     }
 
-    private List<OpenSearchFacetItemVo> buildFacetItems(List<MusicVo> rows,
-                                                        int limit,
-                                                        Function<MusicVo, String> extractor,
-                                                        String type,
-                                                        List<String> selectedValues) {
-        Map<String, Long> counts = rows.stream()
-            .map(extractor)
-            .filter(StringUtils::isNotBlank)
-            .collect(Collectors.groupingBy(Function.identity(), Collectors.counting()));
-        return counts.entrySet().stream()
-            .sorted(Map.Entry.<String, Long>comparingByValue().reversed().thenComparing(Map.Entry::getKey))
-            .limit(limit)
-            .map(entry -> toFacetItem(type, entry.getKey(), entry.getValue(), selectedValues.contains(entry.getKey())))
-            .toList();
+    private List<OpenSearchFacetItemVo> buildFacetItems(List<MusicVo> rows, int limit, Function<MusicVo, String> extractor, String type, List<String> selectedValues) {
+        Map<String, Long> counts = rows.stream().map(extractor).filter(StringUtils::isNotBlank).collect(Collectors.groupingBy(Function.identity(), Collectors.counting()));
+        return counts.entrySet().stream().sorted(Map.Entry.<String, Long>comparingByValue().reversed().thenComparing(Map.Entry::getKey)).limit(limit).map(entry -> toFacetItem(type, entry.getKey(), entry.getValue(), selectedValues.contains(entry.getKey()))).toList();
     }
 
     private List<OpenSearchFacetItemVo> buildTagFacetItems(List<MusicVo> rows, int limit, List<String> selectedTags) {
-        Map<String, Long> counts = rows.stream()
-            .map(MusicVo::getTagsSnapshot)
-            .filter(StringUtils::isNotBlank)
-            .flatMap(value -> extractTagNames(value).stream())
-            .filter(StringUtils::isNotBlank)
-            .collect(Collectors.groupingBy(Function.identity(), Collectors.counting()));
-        return counts.entrySet().stream()
-            .sorted(Map.Entry.<String, Long>comparingByValue().reversed().thenComparing(Map.Entry::getKey))
-            .limit(limit)
-            .map(entry -> toFacetItem("tag", entry.getKey(), entry.getValue(), selectedTags.contains(entry.getKey())))
-            .toList();
+        Map<String, Long> counts = rows.stream().map(MusicVo::getTagsSnapshot).filter(StringUtils::isNotBlank).flatMap(value -> extractTagNames(value).stream()).filter(StringUtils::isNotBlank).collect(Collectors.groupingBy(Function.identity(), Collectors.counting()));
+        return counts.entrySet().stream().sorted(Map.Entry.<String, Long>comparingByValue().reversed().thenComparing(Map.Entry::getKey)).limit(limit).map(entry -> toFacetItem("tag", entry.getKey(), entry.getValue(), selectedTags.contains(entry.getKey()))).toList();
     }
 
     private List<OpenSearchFacetItemVo> buildStyleTagFacetItems(List<MusicVo> rows, int limit, String selectedStyle) {
         List<String> selectedStyles = parseTagFilters(null, null, selectedStyle);
-        List<TagVo> configuredStyles = tagMapper.selectVoList(QueryWrapper.create()
-            .where(TAG.STATUS.eq("0")
-                .and(TAG.TYPE.eq("style")
-                    .or(TAG.TYPE.eq("genre"))
-                    .or(TAG.TYPE.eq("风格"))))
-            .orderBy(TAG.IS_RECOMMEND.desc(), TAG.IS_HOT.desc(), TAG.USE_COUNT.desc(), TAG.SORT_ORDER.asc(), TAG.ID.asc()));
-        Map<String, Long> styleCounts = rows.stream()
-            .map(MusicVo::getTagsSnapshot)
-            .filter(StringUtils::isNotBlank)
-            .flatMap(value -> extractTagNames(value).stream())
-            .filter(StringUtils::isNotBlank)
-            .collect(Collectors.groupingBy(Function.identity(), Collectors.counting()));
-
+        List<TagVo> configuredStyles = tagMapper.selectVoList(QueryWrapper.create().where(TAG.STATUS.eq("0").and(TAG.TYPE.eq("style").or(TAG.TYPE.eq("genre")).or(TAG.TYPE.eq("风格")))).orderBy(TAG.IS_RECOMMEND.desc(), TAG.IS_HOT.desc(), TAG.USE_COUNT.desc(), TAG.SORT_ORDER.asc(), TAG.ID.asc()));
+        Map<String, Long> styleCounts = rows.stream().map(MusicVo::getTagsSnapshot).filter(StringUtils::isNotBlank).flatMap(value -> extractTagNames(value).stream()).filter(StringUtils::isNotBlank).collect(Collectors.groupingBy(Function.identity(), Collectors.counting()));
         LinkedHashMap<String, Long> merged = new LinkedHashMap<>();
-        for (TagVo tag : configuredStyles) {
-            if (StringUtils.isNotBlank(tag.getName())) {
-                merged.put(tag.getName(), styleCounts.getOrDefault(tag.getName(), 0L));
-            }
-        }
-        styleCounts.entrySet().stream()
-            .sorted(Map.Entry.<String, Long>comparingByValue().reversed().thenComparing(Map.Entry::getKey))
-            .forEach(entry -> merged.putIfAbsent(entry.getKey(), entry.getValue()));
-
-        return merged.entrySet().stream()
-            .filter(entry -> entry.getValue() > 0 || selectedStyles.contains(entry.getKey()))
-            .limit(limit)
-            .map(entry -> toFacetItem("style", entry.getKey(), entry.getValue(), selectedStyles.contains(entry.getKey())))
-            .toList();
+        for (TagVo tag : configuredStyles) if (StringUtils.isNotBlank(tag.getName())) merged.put(tag.getName(), styleCounts.getOrDefault(tag.getName(), 0L));
+        styleCounts.entrySet().stream().sorted(Map.Entry.<String, Long>comparingByValue().reversed().thenComparing(Map.Entry::getKey)).forEach(entry -> merged.putIfAbsent(entry.getKey(), entry.getValue()));
+        return merged.entrySet().stream().filter(entry -> entry.getValue() > 0 || selectedStyles.contains(entry.getKey())).limit(limit).map(entry -> toFacetItem("style", entry.getKey(), entry.getValue(), selectedStyles.contains(entry.getKey()))).toList();
     }
 
-    private List<OpenSearchFacetItemVo> buildActiveFilterFacets(List<String> selectedTags,
-                                                                String isOriginal,
-                                                                String isAi,
-                                                                String resourceStatus,
-                                                                String startDate,
-                                                                String endDate,
-                                                                Long playCountMin,
-                                                                Long playCountMax) {
+    private List<OpenSearchFacetItemVo> buildActiveFilterFacets(List<String> selectedTags, String isOriginal, String isAi, String resourceStatus, String startDate, String endDate, Long playCountMin, Long playCountMax) {
         List<OpenSearchFacetItemVo> filters = new ArrayList<>();
-        if (selectedTags != null) {
-            selectedTags.stream()
-                .filter(StringUtils::isNotBlank)
-                .forEach(tag -> filters.add(toActiveFilter("tag", tag, tag)));
-        }
+        if (selectedTags != null) selectedTags.stream().filter(StringUtils::isNotBlank).forEach(tag -> filters.add(toActiveFilter("tag", tag, tag)));
         String normalizedOriginal = normalizeOriginalFilter(isOriginal);
-        if ("1".equals(normalizedOriginal)) {
-            filters.add(toActiveFilter("isOriginal", "原创作品", normalizedOriginal));
-        } else if ("0".equals(normalizedOriginal)) {
-            filters.add(toActiveFilter("isOriginal", "翻唱/二创", normalizedOriginal));
-        }
+        if ("1".equals(normalizedOriginal)) filters.add(toActiveFilter("isOriginal", "原创作品", normalizedOriginal));
+        else if ("0".equals(normalizedOriginal)) filters.add(toActiveFilter("isOriginal", "翻唱/二创", normalizedOriginal));
         String normalizedAi = normalizeBooleanLikeFilter(isAi);
-        if ("1".equals(normalizedAi)) {
-            filters.add(toActiveFilter("isAi", "AI 作品", normalizedAi));
-        } else if ("0".equals(normalizedAi)) {
-            filters.add(toActiveFilter("isAi", "排除 AI", normalizedAi));
-        }
-        if (StringUtils.isNotBlank(resourceStatus)) {
-            filters.add(toActiveFilter("resourceStatus", resolveResourceStatusLabel(resourceStatus), resourceStatus.trim()));
-        }
-        if (StringUtils.isNotBlank(startDate) || StringUtils.isNotBlank(endDate)) {
-            filters.add(toActiveFilter("dateRange", buildRangeLabel(startDate, endDate, "发布时间"), firstNonBlank(startDate, "") + "~" + firstNonBlank(endDate, "")));
-        }
-        if (playCountMin != null || playCountMax != null) {
-            filters.add(toActiveFilter("playRange", buildRangeLabel(playCountMin, playCountMax, "播放量"), String.valueOf(playCountMin) + "~" + playCountMax));
-        }
+        if ("1".equals(normalizedAi)) filters.add(toActiveFilter("isAi", "AI 作品", normalizedAi));
+        else if ("0".equals(normalizedAi)) filters.add(toActiveFilter("isAi", "排除 AI", normalizedAi));
+        if (StringUtils.isNotBlank(resourceStatus)) filters.add(toActiveFilter("resourceStatus", resolveResourceStatusLabel(resourceStatus), resourceStatus.trim()));
+        if (StringUtils.isNotBlank(startDate) || StringUtils.isNotBlank(endDate)) filters.add(toActiveFilter("dateRange", buildRangeLabel(startDate, endDate, "发布时间"), firstNonBlank(startDate, "") + "~" + firstNonBlank(endDate, "")));
+        if (playCountMin != null || playCountMax != null) filters.add(toActiveFilter("playRange", buildRangeLabel(playCountMin, playCountMax, "播放量"), String.valueOf(playCountMin) + "~" + playCountMax));
         return filters;
     }
 
@@ -1099,22 +649,14 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
     }
 
     private String buildRangeLabel(String start, String end, String prefix) {
-        if (StringUtils.isNotBlank(start) && StringUtils.isNotBlank(end)) {
-            return prefix + " " + start + " 至 " + end;
-        }
-        if (StringUtils.isNotBlank(start)) {
-            return prefix + " 自 " + start;
-        }
+        if (StringUtils.isNotBlank(start) && StringUtils.isNotBlank(end)) return prefix + " " + start + " 至 " + end;
+        if (StringUtils.isNotBlank(start)) return prefix + " 自 " + start;
         return prefix + " 至 " + end;
     }
 
     private String buildRangeLabel(Long min, Long max, String prefix) {
-        if (min != null && max != null) {
-            return prefix + " " + min + " 至 " + max;
-        }
-        if (min != null) {
-            return prefix + " ≥ " + min;
-        }
+        if (min != null && max != null) return prefix + " " + min + " 至 " + max;
+        if (min != null) return prefix + " ≥ " + min;
         return prefix + " ≤ " + max;
     }
 
@@ -1131,27 +673,18 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
 
     private List<OpenSearchFacetItemVo> buildMatchFieldFacets(List<MusicVo> rows, String keyword, int limit) {
         List<String> searchTerms = parseSearchTerms(keyword);
-        if (rows == null || rows.isEmpty() || searchTerms.isEmpty()) {
-            return Collections.emptyList();
-        }
+        if (rows == null || rows.isEmpty() || searchTerms.isEmpty()) return Collections.emptyList();
         Map<String, Long> fieldCounts = new LinkedHashMap<>();
         fieldCounts.put("title", countMatches(rows, MusicVo::getTitle, searchTerms));
         fieldCounts.put("subtitle", countMatches(rows, MusicVo::getSubtitle, searchTerms));
         fieldCounts.put("original_title", countMatches(rows, MusicVo::getOriginalTitle, searchTerms));
         fieldCounts.put("creator_name", countMatches(rows, MusicVo::getCreatorName, searchTerms));
         fieldCounts.put("tag", countMatches(rows, MusicVo::getTagsSnapshot, searchTerms));
-        return fieldCounts.entrySet().stream()
-            .filter(entry -> entry.getValue() > 0)
-            .sorted(Map.Entry.<String, Long>comparingByValue().reversed())
-            .limit(Math.max(1, limit / 2))
-            .map(entry -> toMatchFieldFacet(entry.getKey(), entry.getValue()))
-            .toList();
+        return fieldCounts.entrySet().stream().filter(entry -> entry.getValue() > 0).sorted(Map.Entry.<String, Long>comparingByValue().reversed()).limit(Math.max(1, limit / 2)).map(entry -> toMatchFieldFacet(entry.getKey(), entry.getValue())).toList();
     }
 
     private long countMatches(List<MusicVo> rows, Function<MusicVo, String> extractor, List<String> searchTerms) {
-        return rows.stream()
-            .filter(row -> searchTerms.stream().anyMatch(term -> containsIgnoreCase(extractor.apply(row), term)))
-            .count();
+        return rows.stream().filter(row -> searchTerms.stream().anyMatch(term -> containsIgnoreCase(extractor.apply(row), term))).count();
     }
 
     private OpenSearchFacetItemVo toMatchFieldFacet(String field, Long count) {
@@ -1189,9 +722,7 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
 
     private List<OpenSearchSortOptionVo> buildSortOptions(String keyword, String currentSort, String recommendedSort) {
         List<OpenSearchSortOptionVo> options = new ArrayList<>();
-        if (StringUtils.isNotBlank(normalizeKeyword(keyword))) {
-            options.add(toSortOption("relevance", "综合相关", "优先按标题、创作者、标签和热度综合排序", currentSort, recommendedSort));
-        }
+        if (StringUtils.isNotBlank(normalizeKeyword(keyword))) options.add(toSortOption("relevance", "综合相关", "优先按标题、创作者、标签和热度综合排序", currentSort, recommendedSort));
         options.add(toSortOption("publish_time_desc", "最新发布", "适合快速看近期新增作品", currentSort, recommendedSort));
         options.add(toSortOption("play_count_desc", "播放最多", "按播放量优先，适合看热门结果", currentSort, recommendedSort));
         options.add(toSortOption("like_count_desc", "点赞最多", "按点赞量优先，适合看口碑结果", currentSort, recommendedSort));
@@ -1201,11 +732,7 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
         return options;
     }
 
-    private OpenSearchSortOptionVo toSortOption(String code,
-                                                String label,
-                                                String description,
-                                                String currentSort,
-                                                String recommendedSort) {
+    private OpenSearchSortOptionVo toSortOption(String code, String label, String description, String currentSort, String recommendedSort) {
         OpenSearchSortOptionVo option = new OpenSearchSortOptionVo();
         option.setCode(code);
         option.setLabel(label);
@@ -1215,41 +742,25 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
         return option;
     }
 
-    private String buildSearchSummary(String keyword,
-                                      String correctedKeyword,
-                                      List<String> selectedTags,
-                                      String currentSort,
-                                      List<MusicVo> rows) {
+    private String buildSearchSummary(String keyword, String correctedKeyword, List<String> selectedTags, String currentSort, List<MusicVo> rows) {
         long total = rows == null ? 0L : rows.size();
         String normalizedKeyword = normalizeKeyword(keyword);
         if (total <= 0) {
-            if (StringUtils.isNotBlank(correctedKeyword) && !equalsIgnoreCase(correctedKeyword, normalizedKeyword)) {
-                return "当前条件暂无结果，建议改用纠错词“" + correctedKeyword + "”重新检索。";
-            }
+            if (StringUtils.isNotBlank(correctedKeyword) && !equalsIgnoreCase(correctedKeyword, normalizedKeyword)) return "当前条件暂无结果，建议改用纠错词“" + correctedKeyword + "”重新检索。";
             return "当前条件暂无结果，建议放宽标签或切换到更宽松的排序方式。";
         }
-        if (StringUtils.isBlank(normalizedKeyword) && (selectedTags == null || selectedTags.isEmpty())) {
-            return "当前为公开曲库总览，建议优先使用最新发布或热门排序浏览。";
-        }
+        if (StringUtils.isBlank(normalizedKeyword) && (selectedTags == null || selectedTags.isEmpty())) return "当前为公开曲库总览，建议优先使用最新发布或热门排序浏览。";
         StringBuilder summary = new StringBuilder();
         summary.append("当前条件命中 ").append(total).append(" 首作品");
-        if (StringUtils.isNotBlank(normalizedKeyword)) {
-            summary.append("，关键词为“").append(normalizedKeyword).append("”");
-        }
-        if (selectedTags != null && !selectedTags.isEmpty()) {
-            summary.append("，已叠加 ").append(selectedTags.size()).append(" 个标签筛选");
-        }
-        if (!equalsIgnoreCase(currentSort, resolveRecommendedSort(keyword))) {
-            summary.append("，可切换到推荐排序提升结果相关性");
-        }
+        if (StringUtils.isNotBlank(normalizedKeyword)) summary.append("，关键词为“").append(normalizedKeyword).append("”");
+        if (selectedTags != null && !selectedTags.isEmpty()) summary.append("，已叠加 ").append(selectedTags.size()).append(" 个标签筛选");
+        if (!equalsIgnoreCase(currentSort, resolveRecommendedSort(keyword))) summary.append("，可切换到推荐排序提升结果相关性");
         summary.append("。");
         return summary.toString();
     }
 
     private String normalizePanelSort(String sort, String keyword) {
-        if (isRelevanceSort(sort, keyword)) {
-            return "relevance";
-        }
+        if (isRelevanceSort(sort, keyword)) return "relevance";
         SortSpec sortSpec = resolveSort(StringUtils.defaultIfBlank(sort, resolveRecommendedSort(keyword)));
         return resolveSortCode(sortSpec);
     }
@@ -1260,15 +771,11 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
 
     private List<String> buildExpandedSearchTerms(String keyword) {
         List<String> baseTerms = parseSearchTerms(keyword);
-        if (baseTerms.isEmpty()) {
-            return Collections.emptyList();
-        }
+        if (baseTerms.isEmpty()) return Collections.emptyList();
         LinkedHashSet<String> expanded = new LinkedHashSet<>(baseTerms);
         expanded.addAll(resolveBuiltinSynonyms(baseTerms));
         for (Tag tag : loadRelatedTags(baseTerms)) {
-            if (StringUtils.isNotBlank(tag.getName())) {
-                expanded.add(tag.getName().trim());
-            }
+            if (StringUtils.isNotBlank(tag.getName())) expanded.add(tag.getName().trim());
             expanded.addAll(parseAliasTerms(tag.getTagAlias()));
         }
         return new ArrayList<>(expanded);
@@ -1276,15 +783,11 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
 
     private List<String> resolveSynonymKeywords(String keyword) {
         List<String> baseTerms = parseSearchTerms(keyword);
-        if (baseTerms.isEmpty()) {
-            return Collections.emptyList();
-        }
+        if (baseTerms.isEmpty()) return Collections.emptyList();
         LinkedHashSet<String> synonyms = new LinkedHashSet<>();
         synonyms.addAll(resolveBuiltinSynonyms(baseTerms));
         for (Tag tag : loadRelatedTags(baseTerms)) {
-            if (StringUtils.isNotBlank(tag.getName())) {
-                synonyms.add(tag.getName().trim());
-            }
+            if (StringUtils.isNotBlank(tag.getName())) synonyms.add(tag.getName().trim());
             synonyms.addAll(parseAliasTerms(tag.getTagAlias()));
         }
         synonyms.removeAll(baseTerms);
@@ -1293,34 +796,19 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
 
     private String resolveCorrectedKeyword(String keyword, List<String> synonymKeywords) {
         String normalizedKeyword = normalizeKeyword(keyword);
-        if (StringUtils.isBlank(normalizedKeyword)) {
-            return null;
-        }
+        if (StringUtils.isBlank(normalizedKeyword)) return null;
         for (Tag tag : loadRelatedTags(parseSearchTerms(keyword))) {
-            if (equalsIgnoreCase(tag.getName(), normalizedKeyword)) {
-                return normalizedKeyword;
-            }
-            for (String alias : parseAliasTerms(tag.getTagAlias())) {
-                if (equalsIgnoreCase(alias, normalizedKeyword)) {
-                    return tag.getName();
-                }
-            }
+            if (equalsIgnoreCase(tag.getName(), normalizedKeyword)) return normalizedKeyword;
+            for (String alias : parseAliasTerms(tag.getTagAlias())) if (equalsIgnoreCase(alias, normalizedKeyword)) return tag.getName();
         }
-        if (synonymKeywords != null && !synonymKeywords.isEmpty()) {
-            return synonymKeywords.getFirst();
-        }
+        if (synonymKeywords != null && !synonymKeywords.isEmpty()) return synonymKeywords.get(0);
         Tag nearestTag = findNearestTag(normalizedKeyword);
-        if (nearestTag != null && StringUtils.isNotBlank(nearestTag.getName())
-            && !equalsIgnoreCase(nearestTag.getName(), normalizedKeyword)) {
-            return nearestTag.getName();
-        }
+        if (nearestTag != null && StringUtils.isNotBlank(nearestTag.getName()) && !equalsIgnoreCase(nearestTag.getName(), normalizedKeyword)) return nearestTag.getName();
         return normalizedKeyword;
     }
 
     private List<Tag> loadRelatedTags(List<String> baseTerms) {
-        if (baseTerms == null || baseTerms.isEmpty()) {
-            return Collections.emptyList();
-        }
+        if (baseTerms == null || baseTerms.isEmpty()) return Collections.emptyList();
         QueryWrapper wrapper = QueryWrapper.create().where(TAG.STATUS.eq("0"));
         QueryCondition condition = null;
         for (String term : baseTerms) {
@@ -1333,15 +821,8 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
     }
 
     private Tag findNearestTag(String keyword) {
-        if (StringUtils.isBlank(keyword)) {
-            return null;
-        }
-        List<Tag> tags = tagMapper.selectListByQueryAs(
-            QueryWrapper.create()
-                .where(TAG.STATUS.eq("0"))
-                .orderBy(TAG.USE_COUNT.desc(), TAG.IS_HOT.desc(), TAG.SORT_ORDER.asc(), TAG.ID.asc()),
-            Tag.class
-        );
+        if (StringUtils.isBlank(keyword)) return null;
+        List<Tag> tags = tagMapper.selectListByQueryAs(QueryWrapper.create().where(TAG.STATUS.eq("0")).orderBy(TAG.USE_COUNT.desc(), TAG.IS_HOT.desc(), TAG.SORT_ORDER.asc(), TAG.ID.asc()), Tag.class);
         Tag best = null;
         int bestDistance = Integer.MAX_VALUE;
         for (Tag tag : tags) {
@@ -1358,32 +839,19 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
 
     private List<String> buildTagCandidates(Tag tag) {
         LinkedHashSet<String> candidates = new LinkedHashSet<>();
-        if (StringUtils.isNotBlank(tag.getName())) {
-            candidates.add(tag.getName().trim());
-        }
+        if (StringUtils.isNotBlank(tag.getName())) candidates.add(tag.getName().trim());
         candidates.addAll(parseAliasTerms(tag.getTagAlias()));
         return new ArrayList<>(candidates);
     }
 
     private List<String> parseAliasTerms(String rawAlias) {
-        if (StringUtils.isBlank(rawAlias)) {
-            return Collections.emptyList();
-        }
-        return Arrays.stream(rawAlias.split("[|,，/、；;\\s]+"))
-            .map(this::normalizeSearchTerm)
-            .filter(StringUtils::isNotBlank)
-            .filter(item -> !isStopWord(item))
-            .distinct()
-            .toList();
+        if (StringUtils.isBlank(rawAlias)) return Collections.emptyList();
+        return Arrays.stream(rawAlias.split("[|,，/、；;\\s]+")).map(this::normalizeSearchTerm).filter(StringUtils::isNotBlank).filter(item -> !isStopWord(item)).distinct().toList();
     }
 
     private String normalizeSearchTerm(String term) {
-        if (StringUtils.isBlank(term)) {
-            return null;
-        }
-        String value = term.trim()
-            .replaceAll("^[\\p{Punct}，。！？、；：“”‘’（）【】《》]+", "")
-            .replaceAll("[\\p{Punct}，。！？、；：“”‘’（）【】《》]+$", "");
+        if (StringUtils.isBlank(term)) return null;
+        String value = term.trim().replaceAll("^[\\p{Punct}，。！？、；：“”‘’（）【】《》]+", "").replaceAll("[\\p{Punct}，。！？、；：“”‘’（）【】《》]+$", "");
         return StringUtils.isBlank(value) ? null : value;
     }
 
@@ -1392,20 +860,14 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
     }
 
     private List<String> resolveBuiltinSynonyms(List<String> terms) {
-        if (terms == null || terms.isEmpty()) {
-            return Collections.emptyList();
-        }
+        if (terms == null || terms.isEmpty()) return Collections.emptyList();
         LinkedHashSet<String> results = new LinkedHashSet<>();
         Map<String, List<String>> mergedGroups = mergeSynonymGroups();
         for (String term : terms) {
             String normalized = term.toLowerCase(Locale.ROOT);
             for (Map.Entry<String, List<String>> entry : mergedGroups.entrySet()) {
                 if (normalized.equals(entry.getKey().toLowerCase(Locale.ROOT))) {
-                    results.addAll(entry.getValue().stream()
-                        .map(this::normalizeSearchTerm)
-                        .filter(StringUtils::isNotBlank)
-                        .filter(item -> !isStopWord(item))
-                        .toList());
+                    results.addAll(entry.getValue().stream().map(this::normalizeSearchTerm).filter(StringUtils::isNotBlank).filter(item -> !isStopWord(item)).toList());
                 }
             }
         }
@@ -1416,14 +878,10 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
     private Map<String, List<String>> mergeSynonymGroups() {
         LinkedHashMap<String, List<String>> merged = new LinkedHashMap<>(BUILTIN_SYNONYM_GROUPS);
         Map<String, List<String>> custom = parseCustomSynonyms(customSynonymsConfig);
-        if (custom.isEmpty()) {
-            return merged;
-        }
+        if (custom.isEmpty()) return merged;
         custom.forEach((key, values) -> {
             LinkedHashSet<String> mergedValues = new LinkedHashSet<>();
-            if (merged.containsKey(key)) {
-                mergedValues.addAll(merged.get(key));
-            }
+            if (merged.containsKey(key)) mergedValues.addAll(merged.get(key));
             mergedValues.addAll(values);
             merged.put(key, new ArrayList<>(mergedValues));
         });
@@ -1431,68 +889,40 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
     }
 
     private Map<String, List<String>> parseCustomSynonyms(String rawConfig) {
-        if (StringUtils.isBlank(rawConfig)) {
-            return Collections.emptyMap();
-        }
+        if (StringUtils.isBlank(rawConfig)) return Collections.emptyMap();
         LinkedHashMap<String, List<String>> groups = new LinkedHashMap<>();
         for (String group : rawConfig.split(";")) {
-            if (StringUtils.isBlank(group) || !group.contains(":")) {
-                continue;
-            }
+            if (StringUtils.isBlank(group) || !group.contains(":")) continue;
             String[] pair = group.split(":", 2);
             String key = normalizeSearchTerm(pair[0]);
-            if (StringUtils.isBlank(key)) {
-                continue;
-            }
-            List<String> values = Arrays.stream(pair[1].split("\\|"))
-                .map(this::normalizeSearchTerm)
-                .filter(StringUtils::isNotBlank)
-                .filter(item -> !isStopWord(item))
-                .distinct()
-                .toList();
-            if (!values.isEmpty()) {
-                groups.put(key, values);
-            }
+            if (StringUtils.isBlank(key)) continue;
+            List<String> values = Arrays.stream(pair[1].split("\\|")).map(this::normalizeSearchTerm).filter(StringUtils::isNotBlank).filter(item -> !isStopWord(item)).distinct().toList();
+            if (!values.isEmpty()) groups.put(key, values);
         }
         return groups;
     }
 
     private boolean equalsIgnoreCase(String left, String right) {
-        return StringUtils.isNotBlank(left)
-            && StringUtils.isNotBlank(right)
-            && left.trim().toLowerCase(Locale.ROOT).equals(right.trim().toLowerCase(Locale.ROOT));
+        return StringUtils.isNotBlank(left) && StringUtils.isNotBlank(right) && left.trim().toLowerCase(Locale.ROOT).equals(right.trim().toLowerCase(Locale.ROOT));
     }
 
     private int typoThreshold(String keyword) {
-        if (keyword.length() <= 4) {
-            return 1;
-        }
+        if (keyword.length() <= 4) return 1;
         return 2;
     }
 
     private int levenshteinDistance(String left, String right) {
-        if (Objects.equals(left, right)) {
-            return 0;
-        }
-        if (StringUtils.isBlank(left)) {
-            return right.length();
-        }
-        if (StringUtils.isBlank(right)) {
-            return left.length();
-        }
+        if (Objects.equals(left, right)) return 0;
+        if (StringUtils.isBlank(left)) return right.length();
+        if (StringUtils.isBlank(right)) return left.length();
         int[] previous = new int[right.length() + 1];
         int[] current = new int[right.length() + 1];
-        for (int index = 0; index <= right.length(); index++) {
-            previous[index] = index;
-        }
+        for (int index = 0; index <= right.length(); index++) previous[index] = index;
         for (int leftIndex = 1; leftIndex <= left.length(); leftIndex++) {
             current[0] = leftIndex;
             for (int rightIndex = 1; rightIndex <= right.length(); rightIndex++) {
                 int substitutionCost = left.charAt(leftIndex - 1) == right.charAt(rightIndex - 1) ? 0 : 1;
-                current[rightIndex] = Math.min(
-                    Math.min(current[rightIndex - 1] + 1, previous[rightIndex] + 1),
-                    previous[rightIndex - 1] + substitutionCost
-                );
+                current[rightIndex] = Math.min(Math.min(current[rightIndex - 1] + 1, previous[rightIndex] + 1), previous[rightIndex - 1] + substitutionCost);
             }
             int[] temp = previous;
             previous = current;
@@ -1503,28 +933,20 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
 
     private String joinTagText(String tagsSnapshot) {
         List<String> tags = extractTagNames(tagsSnapshot);
-        if (tags.isEmpty()) {
-            return null;
-        }
+        if (tags.isEmpty()) return null;
         return String.join(" / ", tags);
     }
 
     private String highlightByTerms(String text, List<String> searchTerms) {
-        if (StringUtils.isBlank(text) || searchTerms == null || searchTerms.isEmpty()) {
-            return text;
-        }
+        if (StringUtils.isBlank(text) || searchTerms == null || searchTerms.isEmpty()) return text;
         String highlighted = text;
-        for (String term : searchTerms) {
-            highlighted = buildHighlightedText(highlighted, term);
-        }
+        for (String term : searchTerms) highlighted = buildHighlightedText(highlighted, term);
         return highlighted;
     }
 
     private void recordSearchKeyword(String keyword) {
         String normalizedKeyword = normalizeKeyword(keyword);
-        if (StringUtils.isBlank(normalizedKeyword)) {
-            return;
-        }
+        if (StringUtils.isBlank(normalizedKeyword)) return;
         try {
             RedisUtils.getClient().getScoredSortedSet(HOT_SEARCH_KEY).addScore(normalizedKeyword, 1D);
             RedisUtils.getClient().getScoredSortedSet(currentDailyHotKey()).addScore(normalizedKeyword, 1D);
@@ -1535,16 +957,9 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
     }
 
     private List<String> loadKeywordRange(String key, int size) {
-        Collection<Object> keywords = RedisUtils.getClient()
-            .getScoredSortedSet(key)
-            .valueRangeReversed(0, size - 1);
-        if (keywords == null || keywords.isEmpty()) {
-            return Collections.emptyList();
-        }
-        return keywords.stream()
-            .map(String::valueOf)
-            .filter(StringUtils::isNotBlank)
-            .toList();
+        Collection<Object> keywords = RedisUtils.getClient().getScoredSortedSet(key).valueRangeReversed(0, size - 1);
+        if (keywords == null || keywords.isEmpty()) return Collections.emptyList();
+        return keywords.stream().map(String::valueOf).filter(StringUtils::isNotBlank).toList();
     }
 
     private String currentDailyHotKey() {
@@ -1556,86 +971,22 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
     }
 
     private String normalizeKeyword(String keyword) {
-        if (StringUtils.isBlank(keyword)) {
-            return null;
-        }
-        String value = keyword
-            .replace('\u3000', ' ')
-            .replace('，', ' ')
-            .replace('、', ' ')
-            .replace('；', ' ')
-            .replace(';', ' ')
-            .replace('|', ' ')
-            .trim()
-            .replaceAll("\\s+", " ");
+        if (StringUtils.isBlank(keyword)) return null;
+        String value = keyword.replace('\u3000', ' ').replace('，', ' ').replace('、', ' ').replace('；', ' ').replace(';', ' ').replace('|', ' ').trim().replaceAll("\\s+", " ");
         return value.length() > 64 ? value.substring(0, 64) : value;
     }
 
-    private void warmUpIndex(List<MusicVo> rows) {
-        if (!valkeyQueryEnabled || rows == null || rows.isEmpty()) {
-            return;
-        }
-        MusicSearchRepository repository = musicSearchRepositoryProvider.getIfAvailable();
-        if (repository == null) {
-            return;
-        }
-        try {
-            if (indexInitialized.compareAndSet(false, true)) {
-                repository.checkAndCreateIndex();
-            }
-            for (MusicVo row : rows) {
-                repository.save(String.valueOf(row.getId()), toSearchDocument(row));
-            }
-        } catch (Exception ex) {
-            indexInitialized.set(false);
-            log.warn("回填 Valkey 索引失败", ex);
-        }
-    }
-
-    private MusicSearchDocument toSearchDocument(MusicVo row) {
-        MusicSearchDocument document = new MusicSearchDocument();
-        document.setId(String.valueOf(row.getId()));
-        document.setTitle(row.getTitle());
-        document.setSubtitle(row.getSubtitle());
-        document.setOriginalTitle(row.getOriginalTitle());
-        document.setCreatorName(row.getCreatorName());
-        document.setProducerMark(row.getProducerMark());
-        document.setDuration(row.getDuration());
-        document.setBpm(row.getBpm());
-        document.setPublishTime(row.getPublishTime() == null ? null : row.getPublishTime().getTime());
-        document.setPlayCount(row.getPlayCount());
-        document.setLikeCount(row.getLikeCount());
-        document.setCollectCount(row.getCollectCount());
-        document.setShareCount(row.getShareCount());
-        document.setDownloadCount(row.getDownloadCount());
-        document.setAuditStatus(row.getAuditStatus());
-        document.setIsPublic(row.getIsPublic());
-        document.setTags(extractTagNames(row.getTagsSnapshot()));
-        return document;
-    }
-
     private List<String> extractTagNames(String tagsSnapshot) {
-        if (StringUtils.isBlank(tagsSnapshot)) {
-            return Collections.emptyList();
-        }
+        if (StringUtils.isBlank(tagsSnapshot)) return Collections.emptyList();
         try {
             JSONArray array = JSON.parseArray(tagsSnapshot);
-            if (array == null || array.isEmpty()) {
-                return Collections.emptyList();
-            }
+            if (array == null || array.isEmpty()) return Collections.emptyList();
             List<String> tags = new ArrayList<>(array.size());
             for (Object item : array) {
-                if (item instanceof String value && StringUtils.isNotBlank(value)) {
-                    tags.add(value);
-                } else if (item instanceof JSONObject jsonObject) {
-                    String value = firstNonBlank(
-                        jsonObject.getString("name"),
-                        jsonObject.getString("tagName"),
-                        jsonObject.getString("label")
-                    );
-                    if (StringUtils.isNotBlank(value)) {
-                        tags.add(value);
-                    }
+                if (item instanceof String value && StringUtils.isNotBlank(value)) tags.add(value);
+                else if (item instanceof JSONObject jsonObject) {
+                    String value = firstNonBlank(jsonObject.getString("name"), jsonObject.getString("tagName"), jsonObject.getString("label"));
+                    if (StringUtils.isNotBlank(value)) tags.add(value);
                 }
             }
             return tags;
@@ -1646,135 +997,23 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
     }
 
     private String firstNonBlank(String... values) {
-        return Arrays.stream(values)
-            .filter(StringUtils::isNotBlank)
-            .findFirst()
-            .orElse(null);
-    }
-
-    private List<String> buildSearchCommand(String keyword, String tag, String sort, PageQuery pageQuery) {
-        Page<MusicVo> page = pageQuery.build();
-        long offset = Math.max(0, (page.getPageNumber() - 1) * page.getPageSize());
-        String query = buildSearchQuery(keyword, tag);
-        SortSpec sortSpec = resolveSort(sort);
-        List<String> args = new ArrayList<>();
-        args.add("FT.SEARCH");
-        args.add(INDEX_NAME);
-        args.add(query);
-        args.add("NOCONTENT");
-        args.add("SORTBY");
-        args.add(sortSpec.field());
-        args.add(sortSpec.asc() ? "ASC" : "DESC");
-        args.add("LIMIT");
-        args.add(String.valueOf(offset));
-        args.add(String.valueOf(page.getPageSize()));
-        args.add("DIALECT");
-        args.add("2");
-        return args;
-    }
-
-    private String buildSearchQuery(String keyword, String tag) {
-        StringBuilder builder = new StringBuilder("@audit_status:{1} @is_public:{1}");
-        for (String term : parseSearchTerms(keyword)) {
-            builder.append(' ')
-                .append('(')
-                .append("@title:(")
-                .append(escapeSearchTerm(term))
-                .append(")|")
-                .append("@subtitle:(")
-                .append(escapeSearchTerm(term))
-                .append(")|")
-                .append("@original_title:(")
-                .append(escapeSearchTerm(term))
-                .append(")|")
-                .append("@creator_name:(")
-                .append(escapeSearchTerm(term))
-                .append(")|")
-                .append("@tags:{")
-                .append(escapeTagValue(term))
-                .append('}')
-                .append(')');
-        }
-        for (String tagValue : parseTagFilters(tag, null, null)) {
-            builder.append(' ')
-                .append("@tags:{")
-                .append(escapeTagValue(tagValue))
-                .append('}');
-        }
-        return builder.toString();
+        return Arrays.stream(values).filter(StringUtils::isNotBlank).findFirst().orElse(null);
     }
 
     private List<String> parseSearchTerms(String keyword) {
         String normalizedKeyword = normalizeKeyword(keyword);
-        if (StringUtils.isBlank(normalizedKeyword)) {
-            return Collections.emptyList();
-        }
-        return Arrays.stream(normalizedKeyword.split("[\\s,/]+"))
-            .map(this::normalizeSearchTerm)
-            .filter(StringUtils::isNotBlank)
-            .filter(item -> item.length() <= 32)
-            .filter(item -> !isStopWord(item))
-            .collect(Collectors.collectingAndThen(Collectors.toCollection(LinkedHashSet::new), ArrayList::new));
+        if (StringUtils.isBlank(normalizedKeyword)) return Collections.emptyList();
+        return Arrays.stream(normalizedKeyword.split("[\\s,/]+")).map(this::normalizeSearchTerm).filter(StringUtils::isNotBlank).filter(item -> item.length() <= 32).filter(item -> !isStopWord(item)).collect(Collectors.collectingAndThen(Collectors.toCollection(LinkedHashSet::new), ArrayList::new));
     }
 
     private List<String> parseTagFilters(String tag, String tags, String style) {
-        String rawTags = String.join(",",
-            Arrays.stream(new String[] {tag, tags, style})
-                .filter(StringUtils::isNotBlank)
-                .toList());
-        if (StringUtils.isBlank(rawTags)) {
-            return Collections.emptyList();
-        }
-        return Arrays.stream(rawTags.split("[,，|/]+"))
-            .map(String::trim)
-            .filter(StringUtils::isNotBlank)
-            .distinct()
-            .toList();
+        String rawTags = String.join(",", Arrays.stream(new String[]{tag, tags, style}).filter(StringUtils::isNotBlank).toList());
+        if (StringUtils.isBlank(rawTags)) return Collections.emptyList();
+        return Arrays.stream(rawTags.split("[,，|/]+")).map(String::trim).filter(StringUtils::isNotBlank).distinct().toList();
     }
 
-    private String escapeSearchTerm(String value) {
-        StringBuilder builder = new StringBuilder(value.length() * 2);
-        for (char current : value.toCharArray()) {
-            if ("-@{}[]()|!:~*\"'=><".indexOf(current) >= 0) {
-                builder.append('\\');
-            }
-            builder.append(current);
-        }
-        return builder.toString();
-    }
-
-    private String escapeTagValue(String value) {
-        StringBuilder builder = new StringBuilder(value.length() * 2);
-        for (char current : value.toCharArray()) {
-            if (",.<>{}[]\"':;!@#$%^&*()-+=~| \\".indexOf(current) >= 0) {
-                builder.append('\\');
-            }
-            builder.append(current);
-        }
-        return builder.toString();
-    }
-
-    private List<Long> extractIds(Object[] values) {
-        List<Long> ids = new ArrayList<>();
-        for (int index = 1; index < values.length; index++) {
-            Object value = values[index];
-            if (value instanceof byte[] bytes) {
-                addParsedId(ids, new String(bytes));
-            } else if (value instanceof CharSequence sequence) {
-                addParsedId(ids, sequence.toString());
-            }
-        }
-        return ids;
-    }
-
-    private void addParsedId(List<Long> ids, String rawKey) {
-        if (StringUtils.isBlank(rawKey)) {
-            return;
-        }
-        String rawId = rawKey.startsWith(KEY_PREFIX) ? rawKey.substring(KEY_PREFIX.length()) : rawKey;
-        if (StringUtils.isNumeric(rawId)) {
-            ids.add(Long.parseLong(rawId));
-        }
+    private long safeLong(Long value) {
+        return value == null ? 0L : Math.max(0L, value);
     }
 
     private void applySort(QueryWrapper wrapper, String sort) {
@@ -1808,9 +1047,7 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
     }
 
     private String resolveSortCode(SortSpec sortSpec) {
-        if (sortSpec == null) {
-            return DEFAULT_SORT;
-        }
+        if (sortSpec == null) return DEFAULT_SORT;
         return switch (sortSpec.field()) {
             case "play_count" -> sortSpec.asc() ? "play_count_asc" : "play_count_desc";
             case "like_count" -> sortSpec.asc() ? "like_count_asc" : "like_count_desc";
@@ -1822,9 +1059,7 @@ public class OpenMusicServiceImpl implements IOpenMusicService {
     }
 
     private int normalizeLimit(Integer limit, int defaultValue, int maxValue) {
-        if (limit == null || limit <= 0) {
-            return defaultValue;
-        }
+        if (limit == null || limit <= 0) return defaultValue;
         return Math.min(limit, maxValue);
     }
 
